  Bug#15375 Unassigned multibyte codes are broken   into parts when converting to Unicode. m_ctype.h:   Reorganizing mb_wc return codes to be able   to return "an unassigned N-byte-long character". sql_string.cc:   Adding code to detect and properly handle   unassigned characters (i.e. the those character   which are correctly formed according to the   character specifications, but don't have Unicode   mapping). Many files:   Fixing conversion function to return new codes. ctype_ujis.test, ctype_gbk.test, ctype_big5.test:   Adding a test case. ctype_ujis.result, ctype_gbk.result, ctype_big5.result:   Fixing results accordingly.