strings/ctype-sjis.c
@@ -4501,7 +4501,7 @@ my_wc_mb_sjis(CHARSET_INFO *cs  __attribute__((unused)),
 
 mb:
   if (s+2>e)
-    return MY_CS_TOOSMALL;
+    return MY_CS_TOOSMALL2;
   
   s[0]=code>>8;
   s[1]=code&0xFF;
@@ -4515,7 +4515,7 @@ my_mb_wc_sjis(CHARSET_INFO *cs  __attribute__((unused)),
   int hi=s[0];
   
   if (s >= e)
-    return MY_CS_TOOFEW(0);
+    return MY_CS_TOOSMALL;
   
   if (hi < 0x80)
   {
@@ -4530,10 +4530,10 @@ my_mb_wc_sjis(CHARSET_INFO *cs  __attribute__((unused)),
   }
   
   if (s+2>e)
-    return MY_CS_TOOFEW(0);
+    return MY_CS_TOOSMALL2;
   
   if (!(pwc[0]=func_sjis_uni_onechar((hi<<8)+s[1])))
-    return MY_CS_ILSEQ;
+    return -2;
   
   return 2;
 }
